# waypoint_nav

control/: CMakeLists.txt  package.xml
control/cmake/: controlConfig.cmake
control/config/: control.yaml  teleop.yaml  twist_mux.yaml
control/launch/: control.launch  teleop.launch
hector_slam/hector_mapping_nav/launch/: scanmatch_nav.launch
mpu6050/: CMakeLists.txt
mpu6050/launch/: imu.launch
mpu6050/src/: imu.cpp  mpu6050.cpp
navigation/: CMakeLists.txt  package.xml
navigation/launch/: gmapping.launch  move_base_nav.launch  move_base_nav_continuous.launch  navigation.launch  navigation_continuous.launch
navigation/maps/: empty.pgm  empty.yaml
navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
navigation/rviz_config/: model.rviz  outdoor_waypoint_nav_rviz.rviz
outdoor_waypoint_nav/: package.xml
outdoor_waypoint_nav/launch/include/: collect_goals.launch  gps.launch  laser_filter.launch  localization_run.launch  robot_bringup.launch
outdoor_waypoint_nav/launch/outdoor/: load_goals.launch  (+5 more)
outdoor_waypoint_nav/params/: ekf_params.yaml  navsat_params.yaml
outdoor_waypoint_nav/src/: calibrate_heading.cpp  collect_gps_waypoints.cpp  gps_waypoint.cpp  gps_waypoint_continuous1.cpp  gps_waypoint_continuous2.cpp  gps_waypoint_mapping.cpp  plot_gps_waypoints.cpp  safety_node.cpp  switch_controllers.cpp
outdoor_waypoint_nav/waypoint_files/: plot_filtered_points.txt  plot_raw_points.txt  points_outdoor.txt  points_outdoor_daycare_demo.txt
(+3 files in other folders)
